# brandquad

./: .coveragerc  .pre-commit-config.yaml  README.md  cities.jsonl  mypy.ini  pyproject.toml  results.json  scrapy.cfg
.github/workflows/: ci.yaml
aparser/: exporters.py  items.py  middlewares.py  pipelines.py  settings.py
aparser/core/: config.py  decorators.py  load_proxies.py  logger_setup.py
aparser/item_factories/: alkoteka_factory.py
aparser/spiders/: acspider.py  aspider.py  tspiders.py
tests/: conftest.py  test_create_item.py  test_exporters.py  test_items.py  test_load_proxies.py  test_middlewares.py  test_pipelines.py  test_spiders.py
