[tool.poetry]
name = "bqaud"
version = "0.1.0"
description = "Scrapy spider for e-commerce product data extraction."
authors = ["dmvaled <dmvaled@gmail.com>"]
readme = "README.md"
license = "MIT"
keywords = ["brandquad", "scrapy", "spider", "e-commerce", "data", "extraction", "parsing", "solution"]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
scrapy = "^2.11.0"
poetry-core = ">=2.0.0,<3.0.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.12"
black = "^25.1.0"
pre-commit = "^4.2.0"
types-requests = "^2.32.0"
mypy = "^1.16.0"
types-colorama = "^0.4.15.20240311"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
pytest-cov = "^4.1.0"
pytest-mock = "^3.14.0"

[tool.poetry.scripts]
run-test = "pytest"

[tool.ruff]
line-length = 88
target-version = "py312"
fix = true
unsafe-fixes = true

[tool.ruff.lint]
extend-select = ["E", "F", "W", "I"]

[tool.ruff.lint.isort]
force-single-line = true
combine-as-imports = false
force-sort-within-sections = true
lines-after-imports = 2

[tool.black]
line-length = 88
target-version = ["py312"]
skip-string-normalization = false

[tool.pytest.ini_options]
addopts = "-ra -q"
python_files = "test_*.py"
python_functions = "test_*"
testpaths = ["tests"]

[tool.mypy]
config_file = "mypy.ini"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
